Add code of conduct

--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
-hello world
+<!doctype html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>Dribbble Dublin Meetup</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Latest Bootstrap compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    </head>
+    <body>
+        <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+      <div class="container">
+        <h1>Code of Conduct</h1>
+
+        <h2>Quick Version</h2>
+
+        <p>The Dublin Dribbble Meetup community is dedicated to providing a harassment-free experience for everyone, regardless of gender, gender identity and expression, sexual orientation, disability, physical appearance, body size, race, or religion. We do not tolerate harassment of participants in any form.</p>
+
+        <p>Anyone who violates this code of conduct may be expelled from any/all meetups and future meetups at the discretion of the Dribbble Dublin Meetup team and the team at <a href="https://dribbble.com/about">Dribbble HQ</a>.</p>
+
+        <h2>Definitions</h2>
+
+        <h3>Harassment includes:</h3>
+
+        <ul>
+          <li>Offensive comments related to gender, gender identity and expression, sexual orientation, disability, mental illness, neuro(a)typicality, physical appearance, body size, race, or religion</li>
+          <li>Unwelcome comments regarding a person’s lifestyle choices and practices, including those related to food, health, parenting, drugs, and employment.</li>
+          <li>Deliberate misgendering</li>
+          <li>Gratuitous or off-topic sexual images or behaviour in spaces where they’re not appropriate</li>
+          <li>Physical contact without consent or after a request to stop.</li>
+          <li>Threats of violence</li>
+          <li>Incitement of violence towards any individual, including encouraging a person to commit suicide or to engage in self-harm</li>
+          <li>Deliberate intimidation</li>
+          <li>Stalking or following</li>
+          <li>Harassing photography or recording</li>
+          <li>Sustained disruption of discussion</li>
+          <li>Unwelcome sexual attention</li>
+          <li>Pattern of inappropriate social contact, such as requesting/assuming inappropriate levels of intimacy with others</li>
+          <li>Continued one-on-one communication after requests to cease</li>
+          <li>Deliberate “outing” of any aspect of a person’s identity without their consent except as necessary to protect other meetup members or other vulnerable people from intentional abuse</li>
+          <li>Publication of non-harassing private communication</li>
+        </ul>
+
+
+        <h2>Reporting</h2>
+
+        If you are being harassed by a member of the Dublin Dribbble Meetup community, notice that someone else is being harassed, or have any other concerns, please contact one(or more) of those listed below, and the <a href="https://dribbble.com/about">Dribbble HQ team</a></p>.
+
+        <ul>
+          <li>Stephanie Francis - cloudsteph[at]gmail.com</li>
+          <li>Mike McHugh - jymian[at]gmail.com</li>
+          <li>Graham Harper - graham[at]hrpr.co</li>
+          <li>Donovan Hutchinson - donovanh[at]gmail.com</li>
+          <li>Shane Moloney shanemoloney3[at]gmail.com</li>
+        </ul>
+
+        <p>If you are being harassed by a member of the Dublin Dribbble Meetup community outside our spaces, we still want to know about it. We will take all good-faith reports of harassment by Dublin Dribbble Meetup community members seriously. This includes harassment outside our spaces and harassment that took place at any point in time. The Dublin Dribbble Meetup team reserves the right to exclude people from the Dublin Dribbble Meetup community based on their past behavior, including behavior outside Dublin Dribbble Meetup spaces and behavior towards people who are not in the Dublin Dribbble Meetup community.</p>
+
+        <p>We will respect confidentiality requests for the purpose of protecting victims of abuse. At our discretion, we may publicly name a person about whom we’ve received harassment complaints, or privately warn third parties about them, if we believe that doing so will increase the safety of Dublin Dribbble Meetup members or the general public. We will not name harassment victims without their affirmative consent.</p>
+
+        <h2>Consequences</h2>
+
+        <p>Participants asked to stop any harassing behavior are expected to comply immediately.</p>
+
+        <p>If a participant engages in harassing behavior, the Dublin Dribbble Meetup Team may take any action they deem appropriate, up to and including expulsion from all Dublin Dribbble Meetup spaces and identification of the participant as a harasser to other Dublin Dribbble Meetup members or the general public.</p>
+
+
+        <h3>Attribution</h3>
+
+        <p>This anti-harassment policy is based on the example policy from the Geek Feminism wiki, created by the Geek Feminism community.</p>
+
+        <p>The policy is based on the conference anti-harassment policy, and is the work of Annalee Flower Horne with assistance from Valerie Aurora, Alex Skud Bayley, Tim Chevalier, and Mary Gardiner.</p>
+      </div>
+    
+    </body>
+</html>
