--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <h2>Reporting</h2>
 
-        If you are being harassed by a member of the Dublin Dribbble Meetup community, notice that someone else is being harassed, or have any other concerns, please contact one(or more) of those listed below, and the <a href="https://dribbble.com/about">Dribbble HQ team</a></p>.
+        <p>If you are being harassed by a member of the Dublin Dribbble Meetup community, notice that someone else is being harassed, or have any other concerns, please contact one(or more) of those listed below, and the <a href="https://dribbble.com/about">Dribbble HQ team</a>.</p>
 
         <ul>
           <li>Stephanie Francis - cloudsteph[at]gmail.com</li>
