--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li><a href="#">Our next meetup</a></li>
-              <li><a href="#">Github</a></li>
+              <li><a href="https://nvite.com/DribbbleDublin/ed47">Our next meetup</a></li>
+              <li><a href="https://github.com/DribbbleDublinMeetup">Github</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
